Fix default wrapper on small widths.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -32,14 +32,13 @@ html {
 }
 
 .wrap {
-  --_container-width: var(--container-width, 57ch);
+  --_container-width: var(--container-width, 80%);
 
   display: grid;
   grid-column-gap: var(--space-2);
   grid-template-columns:
     1fr
-    [content-start] min(var(--_container-width), px-to-rem(1300))
-    [content-end]
+    [content-start] var(--_container-width) [content-end]
     1fr;
   position: relative;
 
@@ -47,12 +46,20 @@ html {
     grid-column: content;
   }
 
+  @include mq(md) {
+    --container-width: 57ch;
+  }
+
   &--lg {
-    --container-width: 80ch;
+    @include mq(md) {
+      --container-width: 80ch;
+    }
   }
 
   &--xl {
-    --container-width: 80%;
+    @include mq(md) {
+      --container-width: 80%;
+    }
   }
 }
 
